service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server
  namespace: danielagomez-es
spec:
  selector:
    app.kubernetes.io/name: web-server
  ports:
  - name: p80-tcp
    port: 80
    targetPort: 80
    protocol: TCP
