route-0.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: web-server-daniela
  namespace: danielagomez-es
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`danielagomez.es`)
    services:
    - name: web-server
      port: 80
  tls:
    certResolver: acmeresolver
